Updated comments on SDL_ScancodeAndKeycode

--- a/SDL_Scancode.mediawiki
+++ b/SDL_Scancode.mediawiki
@@ -7,7 +7,7 @@ An enumeration of the SDL keyboard scancode representation.
 
 
 == Values ==
-<<Include(SDL_ScancodeAndKeycode, , , from="Start include here.", to="##End Include here")>>
+<<Include(SDL_ScancodeAndKeycode, , , from="##Start include here.", to="##End include here.")>>
 
 == Code Examples ==
 ```c++
