--- a/SDL_Keycode.mediawiki
+++ b/SDL_Keycode.mediawiki
@@ -7,7 +7,7 @@ The SDL virtual key representation.
 
 
 == Values ==
-<<Include(SDL_ScancodeAndKeycode, , , from="Start include here.", to="##End Include here")>>
+<<Include(SDL_ScancodeAndKeycode, , , from="##Start include here.", to="##End include here.")>>
 
 == Code Examples ==
 ```c++
